{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 41,
  "lineage": "ba348fc8-9723-3032-758f-2f8ed09700e1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355376557725:internet-gateway/igw-0408e0202ef7451cd",
            "id": "igw-0408e0202ef7451cd",
            "owner_id": "355376557725",
            "tags": {
              "Name": "LU-IGW"
            },
            "tags_all": {
              "Name": "LU-IGW"
            },
            "vpc_id": "vpc-0b1392510cb3cebaa"
          },
          "dependencies": [
            "aws_vpc.lu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355376557725:route-table/rtb-06da1111c94927c80",
            "id": "rtb-06da1111c94927c80",
            "owner_id": "355376557725",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0408e0202ef7451cd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT for Subnet"
            },
            "tags_all": {
              "Name": "RT for Subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1392510cb3cebaa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.lu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "first",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054172c91f4ebedfe",
            "route_table_id": "rtb-06da1111c94927c80",
            "subnet_id": "subnet-06b4072af885a042a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.web_rt",
            "aws_subnet.database_subnet_1",
            "aws_vpc.lu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "second",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6d209a75cda08ef",
            "route_table_id": "rtb-06da1111c94927c80",
            "subnet_id": "subnet-001b103282264e0b6"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.web_rt",
            "aws_subnet.database_subnet_2",
            "aws_vpc.lu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355376557725:security-group/sg-0d78986b803ff4cb1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d78986b803ff4cb1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db",
            "name_prefix": "",
            "owner_id": "355376557725",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DB SG"
            },
            "tags_all": {
              "Name": "DB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1392510cb3cebaa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355376557725:subnet/subnet-06b4072af885a042a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b4072af885a042a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355376557725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database 1"
            },
            "tags_all": {
              "Name": "Database 1"
            },
            "vpc_id": "vpc-0b1392510cb3cebaa"
          },
          "dependencies": [
            "aws_vpc.lu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355376557725:subnet/subnet-001b103282264e0b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001b103282264e0b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355376557725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database-2b"
            },
            "tags_all": {
              "Name": "Database-2b"
            },
            "vpc_id": "vpc-0b1392510cb3cebaa"
          },
          "dependencies": [
            "aws_vpc.lu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lu_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355376557725:vpc/vpc-0b1392510cb3cebaa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0661a55682b34b14d",
            "default_route_table_id": "rtb-032e656b623d52ecd",
            "default_security_group_id": "sg-0106369c5c665bcec",
            "dhcp_options_id": "dopt-04c16638aa7dd3fed",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b1392510cb3cebaa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-032e656b623d52ecd",
            "owner_id": "355376557725",
            "tags": {
              "Name": "LUIT VPC"
            },
            "tags_all": {
              "Name": "LUIT VPC"
            }
          }
        }
      ]
    }
  ]
}